--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -80,6 +80,7 @@ before-build = [
     "cd {package}",
     "python -m pip install numpy charset_normalizer",
     "python build-win-def.py",
-    "python setup.py build_ext --inplace --compiler=mingw64",
+    "python -c 'import numpy; print(numpy.__version__)'",
+    "python setup.py build_ext --inplace --compiler=mingw32",
 ]
 archs = ["auto64"]
