clean test cases

--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -58,7 +58,8 @@ before-test = [
     "ls -l .",
 ]
 test-command = "pytest -s '{package}/supy/test'"
-
+# only test on macOS
+test-skip = "*_arm64 *win* *manylinux*"
 
 [tool.cibuildwheel.linux]
 # Install system library
@@ -80,8 +81,8 @@ before-build = [
     "cd {package}",
     "python -m pip install numpy charset_normalizer",
     "python build-win-def.py",
-    'python -c "import numpy; print(numpy.__version__)"',
+    # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
-    "ls -l .",
+    # "ls -l .",
 ]
 archs = ["auto64"]
