--- a/.github/workflows/build-publish_to_pypi.yml
+++ b/.github/workflows/build-publish_to_pypi.yml
@@ -57,7 +57,7 @@ jobs:
 
 
   deploy:
-    name: Publish 🐍📦 to (Test)PyPI
+    name: Publish to (Test)PyPI
     needs:
       - build_wheels
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
           name: python-package-distributions
           path: dist/
 
-      - name: Publish distribution 📦 to Test PyPI
+      - name: Publish distribution to Test PyPI
         uses: pypa/gh-action-pypi-publish@release/v1.5
         with:
           packages_dir: dist/
@@ -78,7 +78,7 @@ jobs:
           password: ${{ secrets.TEST_PYPI_API_TOKEN }}
           repository_url: https://test.pypi.org/legacy/
 
-      - name: Publish distribution 📦 to PyPI
+      - name: Publish distribution to PyPI
         if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1.5
         with:
