consolidate pyproject file

--- a/.github/workflows/build-publish_to_pypi.yml
+++ b/.github/workflows/build-publish_to_pypi.yml
@@ -1,6 +1,17 @@
 name: Build and Publish Python wheels to PyPI and TestPyPI
 
-on: [push, pull_request]
+on:
+  push:
+    paths: # Push events containing matching files
+      - "src/suews/*"
+      - "src/supy/*"
+      - ".github/workflows/build-publish_to_pypi.yml"
+
+  pull_request:
+    paths: # PR events containing matching files
+      - "src/suews/*"
+      - "src/supy/*"
+      - ".github/workflows/build-publish_to_pypi.yml"
 
 jobs:
   build_wheels:
