--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -48,18 +48,18 @@ before-build = ["git describe --tags --always --dirty"]
 build-verbosity = 0
 
 test-requires = "pytest"
-before-test = [
-    # "sleep 100",
-    "cd {package}",
-    "ls -l .",
-    "cd supy",
-    "ls -l .",
-    "cd test",
-    "ls -l .",
-]
+# before-test = [
+#     # "sleep 100",
+#     "cd {package}",
+#     "ls -l .",
+#     "cd supy",
+#     "ls -l .",
+#     "cd test",
+#     "ls -l .",
+# ]
 test-command = "pytest -s '{package}/supy/test'"
 # only test on macOS python 3.9
-test-skip = "*_arm64 *win* *manylinux* cp31*-*"
+test-skip = "*win* *manylinux* cp31*-*"
 
 [tool.cibuildwheel.linux]
 # Install system library
@@ -71,7 +71,7 @@ before-all = [
     'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
     "make suews",
 ]
-archs = ["x86_64", "arm64"]
+archs = ["auto", "arm64"]
 skip = ['pp*']
 
 
