link supy to suews

--- a/docs/env.yml
+++ b/docs/env.yml
@@ -19,7 +19,10 @@ dependencies:
   - docutils < 0.17
   - jinja2<3.1
   - sphinx-autobuild
+  - ipykernel
   - doxygen
+  - click
+  - urlpath
   - pip
   - pip:
     - sphinxcontrib_programoutput
@@ -31,6 +34,7 @@ dependencies:
     - sphinxcontrib.email
     - sphinx-last-updated-by-git
     - sphinx_rtd_theme>=0.5
+    - sphinx-click
 
 
 
