--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,11 @@ build:
   os: ubuntu-22.04
   tools:
     python: "mambaforge-4.10"
+  jobs:
+    pre_install:
+      - git update-index --assume-unchanged environment.yml docs/conf.py
+    post_create_environment:
+      - python docs/source/supy/proc_var_info/gen_rst.py
 
 conda:
   environment: docs/env.yml
