--- a/.gitignore
+++ b/.gitignore
@@ -369,3 +369,22 @@ _version_scm.py
 # a quick test file using jupyter notebook
 test/test.ipynb
 **/supy/api/supy.util/
+*.tmp
+
+# Word temporary
+~$*.doc*
+
+# Word Auto Backup File
+Backup of *.doc*
+
+# Excel temporary
+~$*.xls*
+
+# Excel Backup File
+*.xlk
+
+# PowerPoint temporary
+~$*.ppt*
+
+# Visio autosave temporary files
+*.~vsd*
